--- a/.env
+++ b/.env
@@ -3,11 +3,11 @@ CHANNEL=ruikang_me
 LOCALE=zh-cn
 TIMEZONE=Asia/Shanghai
 
-TELEGRAM=ccbikai
-TWITTER=ccbikai
-GITHUB=ccbikai
-DISCORD=https://DISCORD.com
-PODCASRT=https://PODCASRT.com
+TELEGRAM=
+TWITTER=
+GITHUB=
+DISCORD=
+PODCASRT=
 MASTODON=mastodon.social/@Mastodon
 BLUESKY=bsky.app
 
