--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ PODCASRT=
 MASTODON=mastodon.social/@Mastodon
 BLUESKY=bsky.app
 
-FOOTER_INJECT=FOOTER_INJECT
-HEADER_INJECT=HEADER_INJECT
+FOOTER_INJECT=
+HEADER_INJECT=
 
 NO_FOLLOW=false
 NO_INDEX=false
